# openapi2cli

./: AGENTS.md  README.md  pyproject.toml
openapi2cli/: __init__.py  __main__.py  cli.py  generator.py  parser.py  runtime.py
tests/: test_e2e.py  test_generator.py  test_parser.py  test_runtime.py
